package openClosed.v2ObeyOCP.entity.shapes;

import openClosed.v2ObeyOCP.entity.shapes.base.Shape;

public class Rectangle extends Shape {
    @Override
    public void draw() {
        System.out.println("Rectangle");
    }
}
