package openClosed.v2ObeyOCP.entity.shapes.base;

public abstract class Shape {

    public abstract void draw();

}
